RESOLVED FIXED301888
REGRESSION(302461@main) - Crash under RemoteLayerTreeDrawingAreaProxy::commitLayerTree()
https://bugs.webkit.org/show_bug.cgi?id=301888
Summary REGRESSION(302461@main) - Crash under RemoteLayerTreeDrawingAreaProxy::commit...
Matt Woodrow
Reported 2025-11-03 16:12:05 PST
rdar://163956791 MESSAGE_CHECK_BASE(bundle.transactions.first().first->transactionID() == *state.pendingLayerTreeTransactionID, connection); is failing
Attachments
Matt Woodrow
Comment 1 2025-11-03 16:14:30 PST
EWS
Comment 2 2025-11-03 17:46:41 PST
Committed 302507@main (39fd8f47d3d2): <https://commits.webkit.org/302507@main> Reviewed commits have been landed. Closing PR #53360 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.