REGRESSION(302461@main) - Crash under RemoteLayerTreeDrawingAreaProxy::commitLayerTree(). https://bugs.webkit.org/show_bug.cgi?id=301888 rdar://163956791

Reviewed by Gerald Squelart.

NotifyPendingCommitLayerTree gets sent by the WebProcess when returning from
idle, so we need to wait for that (if receivedCommitLayerTreePendingConfirmation
hasn't yet been set) in the Idle case too.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState):

Canonical link: https://commits.webkit.org/302507@main